--- a/angularapp1/src/app/updatecourse/updatecourse.component.html
+++ b/angularapp1/src/app/updatecourse/updatecourse.component.html
@@ -22,10 +22,10 @@
   <h5>Edit Course</h5><br>
   <div id="courseLeft">
   <div  id="editCourseName" >
-      <input formControlName="courseId" type="text" class="form-control" placeholder="Enter the course ID" 
+      <!-- <input formControlName="courseId" type="text" class="form-control" placeholder="Enter the course ID" 
       [(ngModel)]="course.courseId" name="courseId"><br>
       <small *ngIf="!updatecourseform.get('courseId').valid && updatecourseform.get('courseId').touched"
-      class="text-white">* Invalid Course ID</small>
+      class="text-white">* Invalid Course ID</small> -->
       <input formControlName="courseName" type="text" class="form-control" placeholder="Enter the course Name"
       [(ngModel)]="course.courseName" name="courseName"><br>
       <small *ngIf="!updatecourseform.get('courseName').valid && updatecourseform.get('courseName').touched"
