--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -4,7 +4,7 @@
     <a>School Admission  </a>
   <a *ngIf="loginService.isUserLoggedIn()" href="/viewacademy" id="userInstitute" >  Institute   </a>
   <a href="/institute-enroll" id="userEnrolledCourse">   Enrolled Courses   </a>
-  <a href="/login" class="logout" id="logout">   Logout  </a>
+  <a  *ngIf="loginService.isUserLoggedIn()" (click)="logout()" href="" class="logout" id="logout">   Logout  </a>
 </div>
 
 <div class="search"  id="searchButton">
