--- a/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.css
+++ b/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.css
@@ -5,6 +5,46 @@
     width: 100%;
     
 }
+#academyHeader{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:50px;
+    background-color:darkmagenta;
+   
+    
+  
+  }
+  h2{
+    margin-left: 20px;
+  }
+  #academyList{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    
+  }
+  ul li{
+    padding: 55px;
+    list-style: none;
+    
+    
+  }
+  ul li button{
+    cursor: pointer;
+    border: none;
+    background: none;
+    font-size: medium;
+    
+  }
+  #logout{
+    cursor: pointer;
+    border: none;
+    background: none;
+    margin-right:20px ;
+    
+  }
 .instEnroll{
     margin-left: 80%;
 }
