--- a/angularapp1/src/app/login/login.component.html
+++ b/angularapp1/src/app/login/login.component.html
@@ -14,6 +14,7 @@
     crossorigin="anonymous"
   />
   <link rel="stylesheet" href="./login.component.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <body>
     <div class="main">
@@ -47,8 +48,12 @@
             </div>
 
             <div class="cred">
-              <input formControlName="password" type="password" placeholder="Password" class="form-control"
+              <input formControlName="password" [type]="password" type="password" placeholder="Password" class="form-control"
               [(ngModel)] = "login.password" name="password" />
+              <button (click)="onClick()" style="float: right">
+                <i class="fa fa-eye" aria-hidden="true" *ngIf="!show"></i>
+                <i class="fa fa-eye-slash" aria-hidden="true" *ngIf="show"></i>
+              </button>
               <small *ngIf="!loginform.get('password').valid && loginform.get('password').touched" class="text-danger">Invalid Password</small> 
             </div>
           </div>
