--- a/angularapp1/src/app/signup/signup.component.html
+++ b/angularapp1/src/app/signup/signup.component.html
@@ -73,7 +73,7 @@
           <div id="password" class="form-group">
             <input formControlName="password" [type]="password" type="password" class="form-control" placeholder="Enter Password"
             [(ngModel)] = "user.password" name="password" />
-            <button (click)="onClick()" style="float: right">
+            <button (click)="onClick()" class="btn btn-dark" style="float: right">
               <i class="fa fa-eye" aria-hidden="true" *ngIf="!show"></i>
               <i class="fa fa-eye-slash" aria-hidden="true" *ngIf="show"></i>
             </button>
@@ -82,11 +82,11 @@
           </div>            
 
           <div id="confirmPassword">
-            <input formControlName="confirmPassword" [type]="password" type="password" class="form-control" name="confirmPassword" 
+            <input formControlName="confirmPassword" [type]="hide ? 'password' : 'text'" type="password" class="form-control" name="confirmPassword" 
             [(ngModel)]="user.confirmPassword" placeholder="Confirm Password"/>
-            <button (click)="onClick()" style="float: right">
-              <i class="fa fa-eye" aria-hidden="true" *ngIf="!show"></i>
-              <i class="fa fa-eye-slash" aria-hidden="true" *ngIf="show"></i>
+            <button (click)="hide = !hide" class="btn btn-dark" style="float: right">
+              <ng-container *ngIf="hide"> <i class="fa fa-eye"></i></ng-container>
+              <ng-container *ngIf="!hide"> <i class="fa fa-eye-slash"></i></ng-container>
             </button>
             <small *ngIf="signupform.get('confirmPassword').touched && user.password!==user.confirmPassword " class="text-danger">Invalid Password</small> 
 
