--- a/angularapp1/src/app/review/review.component.html
+++ b/angularapp1/src/app/review/review.component.html
@@ -1,11 +1,11 @@
 <html> 
      
     <body>
-        
- 
-       
 
-       <div class="Full">
+
+      
+<div class="Full">
+            
 
        </div>
         <div class="Header">
@@ -25,8 +25,9 @@
                 </div>
                 <textarea cols="10" rows="3" placeholder="Enter Your Review"></textarea>
 
-                <button>SUBMIT</button>
-
+                <button (click)="submit()" id="submit">SUBMIT</button>
+                
+                    
             </form>
         </div> 
         
